# feCUDA

./: .gitignore  CMakeLists.txt  test_matrix_3d.txt  test_matrix_compact.txt
datasets_txt/: CC.txt  CE.txt
include/: headers.cuh  types.cuh  utils.cuh
src/: armar_caminos.cu  indices.cu  iterative_maxmin_cuadrado.cu  kernel_maxmin.cu  main.cpp  main.cu  maxmin.cu  utils.cu
